--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -4,3 +4,9 @@
   gap: 2.25rem;
   padding: 2rem 0;
 }
+
+@media screen and (min-width: 47rem) {
+  .project-grid {
+    gap: 3.5rem;
+  }
+}
